# Boids-shader

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
glad/include/glad/: glad.c  glad.h
glad/src/: glad.c
